--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ feature_icons_background_color            : "#e6e6e6"
 social_icons_foreground_color             : "#666666"
 social_icons_background_color             : "#e6e6e6"
 
-footer_text_color                         : "#666666"
+footer_text_color                         : "#cfcfcf"
 
 
 
